fix for missing background color

--- a/packages/react-components/src/themes/dark.scss
+++ b/packages/react-components/src/themes/dark.scss
@@ -270,4 +270,5 @@ $surface-secondary-active: #3a3a40;
   --picker-list-option-background-hover: #{$surface-secondary-hover};
   --picker-list-option-background-focus: #{$surface-secondary-hover};
   --picker-list-option-background-active: #{$surface-secondary-active};
+  --popover-background: #{$surface-secondary-default};
 }
