--- a/packages/react-components/src/themes/light.scss
+++ b/packages/react-components/src/themes/light.scss
@@ -266,4 +266,5 @@ $surface-primary-active: #eeeeef;
   --picker-list-option-background-hover: #{$surface-primary-hover};
   --picker-list-option-background-focus: #{$surface-primary-hover};
   --picker-list-option-background-active: #{$surface-primary-active};
+  --popover-background: #{$surface-primary-default};
 }
